# fake-shipping-carrier

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fake_shipping_carrier/: __init__.py  app.py  config.py  store.py
tests/: conftest.py  test_health.py  test_shipments.py
